# rust-workflow-orchestration

./: .gitignore  Cargo.toml  Makefile  README.md  compose.yml
.github/workflows/: ci.yml
contracts/: dag-rust-v1.yaml
crates/dag-cli/: Cargo.toml
crates/dag-cli/examples/: etl_pipeline_dag.rs
crates/dag-cli/examples/data/: orders.json
crates/dag-cli/src/: lib.rs  main.rs
crates/dag-core/: Cargo.toml
crates/dag-core/src/: lib.rs  task.rs
crates/dag-lineage/: Cargo.toml
crates/dag-lineage/src/: lib.rs
crates/dag-runner/: Cargo.toml
crates/dag-runner/src/: forjar.rs  lib.rs  local.rs  state.rs
crates/dag-scheduler/: Cargo.toml
crates/dag-scheduler/src/: lib.rs
