[workspace]
members = [
    "crates/dag-core",
    "crates/dag-scheduler",
    "crates/dag-runner",
    "crates/dag-lineage",
    "crates/dag-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/paiml/rust-workflow-orchestration"
homepage = "https://github.com/paiml/rust-workflow-orchestration"
authors = ["Noah Gift <noah@paiml.com>"]
rust-version = "1.95"

[workspace.dependencies]
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
