[workspace]
members = [
    "crates/dag-core",
    "crates/dag-scheduler",
    "crates/dag-runner",
    "crates/dag-lineage",
    "crates/dag-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/paiml/rust-workflow-orchestration"
homepage = "https://github.com/paiml/rust-workflow-orchestration"
authors = ["Noah Gift <noah@paiml.com>"]
rust-version = "1.95"

[workspace.dependencies]
# Internal — path-only inside this workspace; not published.
dag-core = { path = "crates/dag-core", version = "0.1.0" }
dag-lineage = { path = "crates/dag-lineage", version = "0.1.0" }
dag-scheduler = { path = "crates/dag-scheduler", version = "0.1.0" }
dag-runner = { path = "crates/dag-runner", version = "0.1.0" }

# External — all from crates.io.
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
petgraph = "0.6"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "macros", "sqlite"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tokio-cron-scheduler = "0.15"
