[package]
name = "dag-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "DAG model, Task trait, toposort, cycle detection (petgraph-backed)"

[dependencies]
petgraph.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
async-trait.workspace = true
anyhow.workspace = true

[dev-dependencies]
tokio = { workspace = true }
