[package]
name = "dag-lineage"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "sqlx-backed run/lineage store for the c16 workflow-orchestration course"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
sqlx.workspace = true
tokio = { workspace = true }
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
