[package]
name = "dag-scheduler"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "tokio-cron-scheduler wrapper that triggers DAG runs on a schedule"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tokio = { workspace = true }
tokio-cron-scheduler.workspace = true
cron = "0.15"
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
